--- a/src/style.scss
+++ b/src/style.scss
@@ -10,10 +10,19 @@
 	// overflow: hidden;
 	
 
-	> ul {
-		// display: flex;
-		// flex-direction: row;
-		// flex-wrap: nowrap;	
+	.splide__track { // giving exact width to the slider so slides are not cut off
+		--slide-width: 300px;
+		width: var(--slide-width);
+		margin: auto;
+		@media (min-width: 630px) {
+			width: calc( var(--slide-width) * 2 + 10px); // the extra 10px lets us see the next slide
+		}
+		@media (min-width: 930px) {
+			width: calc( var(--slide-width) * 3 + 10px);
+		}
+		@media (min-width: 1200px) {
+			width: calc( var(--slide-width) * 4 + 10px );
+		}
 	}
 
 	// Style only for Frontend: Make it a proper slider with overflow hidden
@@ -21,8 +30,18 @@
 		// [...]
 		cursor: pointer;
 
-		&:hover {
+		li:hover {
+			background-size: auto 130%;
 
+			.wp-block-coco-blocks-simple-slider__badge {
+				opacity: 1; // on hover make 1
+			}
+			// the button when HOVERING
+			.wp-block-coco-blocks-simple-slider__button {
+				background-color: var(--wp--preset--color--accent);
+				color:  var(--wp--preset--color--base) !important;
+				border-color: var(--wp--preset--color--base);
+			}
 		}
 	}
 
@@ -41,19 +60,7 @@
 		transition: all 1s;
 
 		flex: 0 0 300px;
-		padding: 30px 30px;
-	
-
-		&:hover {
-			background-size: auto 130%;
-
-			// the button when HOVERING
-			.wp-block-coco-blocks-simple-slider__button {
-				background-color: var(--wp--preset--color--accent);
-				color:  var(--wp--preset--color--base);
-				border-color: var(--wp--preset--color--base);
-			}
-		}
+		padding: 50px 30px;
 
 		// this is the link <a>
 		.wp-block-coco-blocks-simple-slider__clickablewrapper {
@@ -64,11 +71,13 @@
 		}
 			// the span
 			.wp-block-coco-blocks-simple-slider__badge {
-				border :1px solid var(--wp--preset--color--base);
+				border :1px solid rgba(255,255,255,0.7);
+				opacity: 0.8; // on hover make 1
+				border-radius: 4px;
 				display: inline-block;
 				justify-self: baseline;
 				align-self: baseline;
-				background: var(--wp--preset--color--accent);
+				// background: var(--wp--preset--color--accent);
 				color: var(--wp--preset--color--base);
 				padding: 0px 10px;
 				text-transform: uppercase;
@@ -78,18 +87,33 @@
 			// the h3
 			.wp-block-coco-blocks-simple-slider__title {
 				color: var(--wp--preset--color--base);
+				font-size: 1.5rem;
 			}
 		
 
 	}
 
 	&__button {
-		border: 					1px solid var(--wp--preset--color--contrast);
-		padding: 					10px 15px;
-		background-color: var(--wp--preset--color--base);
+		// border: 					1px solid var(--wp--preset--color--contrast);
+		// padding: 					10px 15px;
+		// background-color: var(--wp--preset--color--base);
 		border-radius: 		5px;
+		font-size: 				0.9rem !important;
 		justify-self: 		baseline;
 		align-self:  			end;
 	}
 }
 
+/* slider arrows moved to the sidex if screen is wide enough */
+@media (min-width: 1390px) {
+
+	.splide__arrow{
+		transition: all 0.5s;
+		&.splide__arrow--prev {
+			transform: translateX(-200%);
+		}
+		&.splide__arrow--next {
+			transform: translateX(200%);
+		}
+	}
+}
